# offset-vec-rs

./: Cargo.toml  README.md
.github/workflows/: push.yml
src/: lib.rs  offset.rs  slice.rs  util.rs  vec_like.rs
src/externs/: core_impls.rs
src/offset/: check.rs
src/vec_like/: pointers_impl.rs  rc_vec_impl.rs  smallstr_impl.rs  smallvec_impl.rs  string_impl.rs  vec_impl.rs
src/vec_like/pointers_impl/: unique_rc_impl.rs
src/vec_like/smallstr_impl/: drain.rs
tests/: tests.rs
