[package]
name = "offset-vec"
version = "0.3.5"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["no_std", "vec", "vector", "offset"]
categories = ["no-std", "data-structures", "rust-patterns"]
description = "Packer for Vec and String etc, for all methods index add a offset"

license = "MIT"
repository = "https://github.com/A4-Tacks/offset-vec-rs"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
std = ["unique-rc?/std", "rc-vec?/std", "tailvec?/std"]
smallvec = ["dep:smallvec"]
rc-vec = ["dep:rc-vec"]
unique-rc = ["dep:unique-rc"]
tailvec = ["dep:tailvec"]
smallstr = ["dep:smallstr", "smallvec"]

[dependencies]
rc-vec = { version = "0.1.14", optional = true, default-features = false }
smallstr = { version = "0.2.0", optional = true, default-features = false }
smallvec = { version = "1.15.1", optional = true }
tailvec = { version = "0.2.13", optional = true, default-features = false }
unique-rc = { version = "0.2.3", optional = true, default-features = false }
